<resources>
    <string name="app_name">Tab</string>

    <string name="action_new_contact" translatable="false">New Contact</string>
    <string name="action_settings">Settings</string>
    <string name="no_contacts">No contacts</string>
    <string name="transactions">Transactions</string>

    <string name="new_transaction">New Transaction</string>
    <string name="amount_hint">17.50</string>
    <string name="from">From\u0020</string>
    <string name="to">To\u0020</string>
    <string name="amount">Amount</string>
    <string name="reason">Reason</string>
    <string name="reason_hint">Pizza</string>
    <string name="date">Date</string>
    <string name="select_date">Select Date</string>
    <string name="confirm">Confirm</string>
    <string name="background">Background</string>

    <string name="image_character">Character</string>
    <string name="image_clear_all">Clear all transactions</string>




    <string name="title_activity_new_contact">New Contact</string>
    <string name="title_activity_contact_page">Contact</string>
    <string name="title_activity_new_transaction">New Transaction</string>
    <string name="title_activity_edit_contact">Edit Contact</string>
    <string name="send_invoice">Send Invoice</string>
    <string name="share">Send Invoice</string>
    <string name="i_lent_you">"I lent you "</string>
    <string name="you_lent_me">"You lent me "</string>
    <string name="we_dont_owe">"We don\'t owe each other anything."</string>
    <string name="i_owe_you_total">"I owe you a total of "</string>
    <string name="you_owe_me_total">"You owe me a total of "</string>
    <string name="you_owe_me">You owe me</string>
    <string name="i_owe_you">I owe you</string>
    <string name="forr"> " for " </string>
    <string name="invoice"> Invoice  </string>
    <string name="name">Name </string>
    <string name="example_name">John</string>
    <string name="youre_whole">You\'re whole</string>
    <string name="owe">You owe\u0020</string>
    <string name="owed">You are owed\u0020</string>
    <string name="you_and">You and\u0020</string>
    <string name="dont_owe_each_other">\u0020don\'t owe each other.</string>
    <string name="owes_you">\u0020owes you\u0020</string>

    <string name="contact_name">Name</string>


</resources>

