<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    tools:context="org.tappers.transaction.NewTransaction">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/my_toolbar">
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textColor="#0b0c0e"
                android:text="@string/amount"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:paddingTop="5dp"
                android:fontFamily="sans-serif-light"
                android:id="@+id/lblTransactionTran"
                android:layout_centerHorizontal="true"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="30dp"
                android:textSize="14sp"
                android:hint="@string/amount_hint"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:fontFamily="sans-serif-light"
                android:ems="10"
                android:id="@+id/txtTransactionTran"
                android:layout_below="@+id/lblTransactionTran" />


            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txtTransactionTran"
                android:layout_toRightOf="@+id/txtTransactionTran"
                android:layout_marginLeft="-20dp"
                android:layout_marginStart="-20dp"
                android:layout_alignTop="@+id/txtTransactionTran"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/to"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:checked="true"
                    android:id="@+id/rdbToTran"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/from"
                    android:id="@+id/rdbFromTran"
                    android:layout_gravity="right" />

            </RadioGroup>


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtTransactionTran"
                android:textColor="#0b0c0e"
                android:text="@string/reason"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:paddingTop="5dp"
                android:fontFamily="sans-serif-light"
                android:id="@+id/lblReasonTran"
                android:layout_centerHorizontal="true"
                />

            <EditText
                android:layout_width="fill_parent"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:textSize="14dp"
                android:hint="@string/reason_hint"
                android:layout_height="wrap_content"
                android:inputType="textAutoCorrect"
                android:fontFamily="sans-serif-light"
                android:text=""
                android:ems="10"
                android:id="@+id/txtReasonTran"
                android:layout_below="@+id/lblReasonTran"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtReasonTran"
                android:textColor="#0b0c0e"
                android:text="@string/date"
                android:textSize="20sp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:paddingTop="5dp"
                android:fontFamily="sans-serif-light"
                android:id="@+id/lblDateTran"
                android:layout_centerHorizontal="true"
                />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/select_date"
                android:layout_marginLeft="10dp"
                android:fontFamily="sans-serif-light"
                android:id="@+id/btnPickNewDateTran"
                android:layout_below="@+id/lblDateTran"
                android:layout_toEndOf="@+id/lblSetDateTran"
                android:layout_toRightOf="@+id/lblSetDateTran"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:gravity="center"
                android:fontFamily="sans-serif-light"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Date Selected: 14/12/2015"
                android:layout_marginLeft="20dp"
                android:textSize="14dp"
                android:id="@+id/lblSetDateTran"
                android:layout_alignTop="@+id/btnPickNewDateTran"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:layout_below="@+id/btnPickNewDateTran"
                android:text="@string/confirm"
                android:id="@+id/cmdConfirmTrans"/>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>
